client/k8s/namespace-client-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-discovery: disabled
    istio-injection: disabled
  name: internal-client-1
