client/k8s/deployment-client-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: internal-client-2
    app.kubernetes.io/component: internal-client-2
    app.kubernetes.io/instance: internal-client-2
    app.kubernetes.io/name: internal-client-2
    app.kubernetes.io/part-of: internal-client-2
    app.openshift.io/runtime: python
  name: internal-client-2
  namespace: internal-client-2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: internal-client-2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: internal-client-2
        deployment: internal-client-2
    spec:
      containers:
      - env:
        - name: API_FQDN
          valueFrom:
            configMapKeyRef:
              key: API_FQDN
              name: api-connectivity
        - name: API_FQDN_2
          valueFrom:
            configMapKeyRef:
              key: API_FQDN_2
              name: api-connectivity
        image: quay.io/llevy/internal-client
        imagePullPolicy: Always
        name: internal-client-2
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
