client/k8s/service-client-1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: internal-client-1
    app.kubernetes.io/component: internal-client-1
    app.kubernetes.io/instance: internal-client-1
    app.kubernetes.io/name: internal-client-1
    app.kubernetes.io/part-of: internal-client-1
    app.openshift.io/runtime-version: latest
  name: internal-client-1
  namespace: internal-client-1
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: internal-client-1
    deployment: internal-client-1
