client/k8s/service-client-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: internal-client-2
    app.kubernetes.io/component: internal-client-2
    app.kubernetes.io/instance: internal-client-2
    app.kubernetes.io/name: internal-client-2
    app.kubernetes.io/part-of: internal-client-2
    app.openshift.io/runtime-version: latest
  name: internal-client-2
  namespace: internal-client-2
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: internal-client-2
    deployment: internal-client-2
